--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "firebase": "^4.1.2",
     "lodash": "^4.17.4",
     "react": "^15.6.0",
-    "react-dom": "^15.6.0"
+    "react-dom": "^15.6.0",
+    "react-firebase": "^2.2.6"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
