--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lodash": "^4.17.4",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
-    "react-firebase": "^2.2.6"
+    "react-firebase": "^2.2.6",
+    "react-form": "^1.2.8"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
