--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "firebase": "^4.1.2",
+    "firebaseui": "^2.1.1",
     "lodash": "^4.17.4",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
