--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.4",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
-    "react-firebase": "^2.2.6"
+    "react-firebase": "^2.2.6",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
